syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "Nystya/distributed-commit/grpc/proto-files/service";

package service;

service Commit {
    rpc Prepare(TransactionRequest) returns (TransactionResponse);
    rpc Commit(TransactionID) returns (TransactionResponse);
    rpc Abort(TransactionID) returns (TransactionResponse);

    rpc Get(Key) returns (DataResponse);
    rpc GetStatus(TransactionID) returns (TransactionResponse);

    rpc Fail(FailRequest) returns (google.protobuf.Empty);
}

message TransactionRequest {
    string Key = 1;
    bytes Value = 2;
    TransactionID TransactionID = 3;
}

message TransactionResponse {
    TransactionID ID = 1;
    Decision decision = 2;
}

enum Decision {
    READY   = 0;
    COMMIT  = 1;
    ABORT   = 2;
}

message TransactionID {
    string ID = 1;
}

message Key {
    string Key = 1;
}

message FailRequest {
    int32 Period = 1;
}

message DataResponse {
    bytes Value = 1;
}
